Fixed overflow

--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -179,7 +179,8 @@
 }
 
 .WrapperItemInfo {
-    padding-left: 10px
+    padding-left: 10px;
+    overflow: hidden;
 }
 
 .VideoItemImg {
